--- a/app/templates/message.html
+++ b/app/templates/message.html
@@ -1,15 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}" />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/demo.css') }}" />
 </head>
+    <header>
+        <div class="limiter">
+            <h3>VGS Test Application Outbound Form</h3></br></br>
+            <h3>Credit Card Alias: {{ccn}}</h3></br>
+            <h3>CVV Alias: {{cvv}}</h3></br>
+            <h3>Expiration Date Alias: {{exp}}</h3></br>
+        </div>
+    </header>
 <body>
-<h1>Redacted data: {{ message }}</h1>
-<form method="post" action="/forward">
-    <input placeholder="alias here" type="text" name="message">
-    <button type="submit">Reveal data</button>
-</form>
-
+    <div class="container-fluid">
+        <div class="creditCardForm">
+            <div class="heading">
+                <h1>Enter Aliased Details for Outbound Request to VGS Echo Server</h1>
+            </div>
+            <div class="payment">
+                <form method="post" action="/forward">
+                    <div class="form-group" id="card-number-field">
+                        <label for="cardNumber">Card Number</label>
+                        <input type="text" class="form-control" id="cardNumber" name="ccn">
+                    </div>
+                    <div class="form-group CVV">
+                        <label for="cvv">CVV</label>
+                        <input type="text" class="form-control" id="cvv" name="cvv">
+                    </div>
+                    <div class="form-group" id="expiration-date">
+                        <label>Expiration Date</label>
+                        <input type="text" class="form-control" id="exp" name="exp">
+                    </div>
+                    <div class="form-group" id="pay-now">
+                        <button type="submit" class="btn btn-default" id="confirm-purchase">Confirm</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
