added redact and reveal routes

--- a/app/templates/forward.html
+++ b/app/templates/forward.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Revealed data:</h1>
-<div>{{ response.data }}</div>
+<h1>Revealed Card Number: {{ card_num }}</h1>
+<h1>Revealed Expiration Date: {{ exp_date }}</h1>
+<h1>Revealed CVV: {{ cvv }}</h1>
 </body>
 </html>
