--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Please, enter the text to be redacted</h1>
-<form method="post" action="/add_message">
-    <input type="text" name="message">
-    <button type="submit">Redact data</button>
+<h1>Please create your payment method</h1>
+<form method="post" action="/add_payment">
+	<p>
+		<label for="card_num">Card Number</label>
+    	<input type="text" name="card_num">
+	</p>
+	<p>
+    	<label for="exp_date">Expiration Date</label>
+    	<input type="text" name="exp_date">
+    </p>
+    <p>
+    	<label for="cvv">CVV</label>
+    	<input type="text" name="cvv">
+    </p>
+    <p> <button type="submit">Submit</button> </p>
 </form>
 
 {% endblock %}
