--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,9 @@
 {% block content %}
 <h1>Please, enter the text to be redacted</h1>
 <form method="post" action="/add_message">
-    <input type="text" name="message">
+    <input type="text" name="name">
+    <input type="text" name="cc_cvv">
+    <input type="text" name="cc_number">
     <button type="submit">Redact data</button>
 </form>
 
