--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
+    <title>Mike's Test CC Form</title>
+    <script type="text/javascript" src="https://js.verygoodvault.com/vgs-collect/2.1.0/vgs-collect.js"></script>
+    <style>
+    * {
+        box-sizing: border-box;
+      }
+      form {
+        width: 300px;
+        margin: 0 auto;
+      }
+      .form-field {
+        width: 100%;
+        height: 40px;
+        position: relative;
+        background: white;
+        margin-bottom: 10px;
+        border-radius: 4px;
+        box-shadow: 0 0 3px 0px rgba(0, 0, 0, .3);
+        padding: 0 10px;
+      }
+      iframe {
+        width: 100%;
+        height: 100%;
+      }
+      .form-field-group {
+        display: flex;
+        flex-flow: wrap;
+      }
+      .form-field-group div {
+        flex: 0 0 50%;
+      }
+      .form-field-group div:first-child {
+        border-radius: 4px 0 0 4px;
+      }
+      .form-field-group div:last-child {
+        border-radius: 0 4px 4px 0;
+      }
+    </style>
 </head>
 <body>
 {% block content %}{% endblock %}
