--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,72 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Please, enter the text to be redacted</h1>
-<form method="post" action="/add_message">
-    <input type="text" name="message">
-    <button type="submit">Redact data</button>
+
+<form id="collect-form">
+  <div id="cc-holder" class="form-field"></div>
+  <div id="cc-number" class="form-field"></div>
+  <div class="form-field-group">
+    <div id="cc-expiration-date" class="form-field"></div>
+    <div id="cc-cvc" class="form-field"></div>
+  </div>
+  <button type="submit">Submit</button>
 </form>
 
+
+const vgsForm = window.VGSCollect.create('tntnopmrps6', 'SANDBOX', () => {});
+
+const css = {
+  boxSizing: 'border-box',
+  fontFamily: '-apple-system, BlinkMacSystemFont, "Segoe UI"',
+};
+
+vgsForm.field('#cc-holder', {
+  type: 'text',
+  name: 'card_holder',
+  placeholder: 'Card holder',
+  validations: ['required'],
+  css: css,
+});
+
+vgsForm.field('#cc-number', {
+  type: 'card-number',
+  name: 'card_number',
+  successColor: '#4F8A10',
+  errorColor: '#D8000C',
+  placeholder: 'Card number',
+  showCardIcon: true,
+  validations: ['required', 'validCardNumber'],
+  css: css,
+});
+
+vgsForm.field('#cc-cvc', {
+  type: 'card-security-code',
+  name: 'card_cvc',
+  successColor: '#4F8A10',
+  errorColor: '#D8000C',
+  placeholder: 'CVC',
+  maxLength: 3,
+  validations: ['required', 'validCardSecurityCode'],
+  css: css,
+});
+
+vgsForm.field('#cc-expiration-date', {
+  type: 'card-expiration-date',
+  name: 'card_exp',
+  successColor: '#4F8A10',
+  errorColor: '#D8000C',
+  placeholder: 'MM / YY',
+  validations: ['required', 'validCardExpirationDate'],
+  css: css,
+});
+
+document.getElementById("collect-form").addEventListener('submit', (e) => {
+  e.preventDefault();
+  vgsForm.submit('/post', {}, (status, response) => {
+    if (status === 200) {
+      console.log("success");
+    }
+  }, (error) => {
+    console.log(error);
+  });
+});
 {% endblock %}
