fixed script tag issue with index.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,7 +11,7 @@
   <button type="submit">Submit</button>
 </form>
 
-
+<script>
 const vgsForm = window.VGSCollect.create('tntnopmrps6', 'SANDBOX', () => {});
 
 const css = {
@@ -69,4 +69,5 @@ document.getElementById("collect-form").addEventListener('submit', (e) => {
     console.log(error);
   });
 });
+</script>
 {% endblock %}
