--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -68,7 +68,7 @@
           <div class="alert alert-info p-2">
             Please fill in and submit a form to see redacted data in response window.
           </div>
-          <form id="cc-form">
+          <form id="cc-form" action="/message">
             <div class="form-group">
               <label for="cc-name">Name</label>
               <span id="cc-name" class="form-field">
