--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -154,7 +154,7 @@
   document.getElementById('cc-form')
     .addEventListener('submit', function(e) {
       var redirect = function(){
-      document.location.href="contact.html"
+      document.location.href="reveal"
     };
       e.preventDefault();
       form.submit('/post', {
