--- a/app/templates/message.html
+++ b/app/templates/message.html
@@ -6,9 +6,8 @@
 </head>
 <body>
 <h1>Redacted data: {{ message }}</h1>
-<form method="post" action="/forward">
-    <input placeholder="alias here" type="text" name="message">
-    <button type="submit">Reveal data</button>
+<form method="get" action="/reveal">
+    <button type="submit">Reveal Card Data</button>
 </form>
 
 </body>
