--- a/app/templates/message.html
+++ b/app/templates/message.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Redacted data: {{ message }}</h1>
+<h1>Redacted data:</h1>
+<pre>{{ message }}</pre>
 <form method="get" action="/reveal">
     <button type="submit">Reveal Card Data</button>
 </form>
