--- a/app/templates/reveal.html
+++ b/app/templates/reveal.html
@@ -51,11 +51,7 @@
       </style>
 </head>
 <body>
-<h1>Redacted data:</h1>
-<pre>{{ message }}</pre>
-<form method="get" action="/reveal">
-    <button type="submit">Reveal Card Data</button>
-</form>
-
+<h1>Revealed Card Data:</h1>
+<div><pre>{{ response.data }}</pre></div>
 </body>
 </html>
