--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,9 @@
     body {
       padding: 25px;
     }
-
+    pre {
+        white-space: pre-wrap;
+        }   
     span[id*="cc-"] {
       display: block;
       height: 40px;
