--- a/app/templates/message.html
+++ b/app/templates/message.html
@@ -9,6 +9,9 @@
         body {
           padding: 25px;
         }
+        pre {
+        white-space: pre-wrap;
+        }   
     
         span[id*="cc-"] {
           display: block;
