--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Mike's Test CC Form</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script type="text/javascript" src="https://js.verygoodvault.com/vgs-collect/2.1.0/vgs-collect.js"></script>
     <style>
     * {
@@ -12,6 +14,9 @@
         width: 300px;
         margin: 0 auto;
       }
+      pre {
+        white-space: pre-wrap;
+        }   
       .form-field {
         width: 100%;
         height: 40px;
@@ -43,6 +48,5 @@
 </head>
 <body>
 {% block content %}{% endblock %}
-</form>
 </body>
 </html>
