--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,64 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>VGS Collect Credit Card Example</title>
-
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-  
-    <script type="text/javascript" src="https://js.verygoodvault.com/vgs-collect/2.1.0/vgs-collect.js"></script>
-  <style>
-    body {
-      padding: 25px;
-    }
-    pre {
-        white-space: pre-wrap;
-        }   
-    span[id*="cc-"] {
-      display: block;
-      height: 40px;
-      margin-bottom: 15px;
-    }
-
-    span[id*="cc-"] iframe {
-      height: 100%;
-      width: 100%;
-    }
-
-    pre {
-      font-size: 12px;
-    }
-
-    .form-field {
-      display: block;
-      width: 100%;
-      height: calc(2.25rem + 2px);
-      padding: .375rem .75rem;
-      font-size: 1rem;
-      line-height: 1.5;
-      color: #495057;
-      background-color: #fff;
-      background-clip: padding-box;
-      border: 1px solid #ced4da;
-      border-radius: .25rem;
-      transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-    }
-
-    .form-field iframe {
-      border: 0 none transparent;
-      height: 100%;
-      vertical-align: middle;
-      width: 100%;
-    }
-
-    p {
-      margin-bottom: 10px;
-    }
-  </style>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
 <main>
   <div class="row">
     <div class="col-md-2"></div>
@@ -169,5 +110,4 @@
 
 
 </script>
-</body>
-</html>
+{% endblock %}
