--- a/app/templates/message.html
+++ b/app/templates/message.html
@@ -1,61 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Title</title>
-    <style>
-        body {
-          padding: 25px;
-        }
-        pre {
-        white-space: pre-wrap;
-        }   
-    
-        span[id*="cc-"] {
-          display: block;
-          height: 40px;
-          margin-bottom: 15px;
-        }
-    
-        span[id*="cc-"] iframe {
-          height: 100%;
-          width: 100%;
-        }
-    
-        pre {
-          font-size: 12px;
-        }
-    
-        .form-field {
-          display: block;
-          width: 100%;
-          height: calc(2.25rem + 2px);
-          padding: .375rem .75rem;
-          font-size: 1rem;
-          line-height: 1.5;
-          color: #495057;
-          background-color: #fff;
-          background-clip: padding-box;
-          border: 1px solid #ced4da;
-          border-radius: .25rem;
-          transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-        }
-    
-        .form-field iframe {
-          border: 0 none transparent;
-          height: 100%;
-          vertical-align: middle;
-          width: 100%;
-        }
-    
-        p {
-          margin-bottom: 10px;
-        }
-      </style>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
 <div class="col-md-4">
     <div class="alert alert-warning">
       <h5 class="text-center">Redacted data</h5>
@@ -65,7 +9,7 @@
     </div>
   </div>
 <div class="row">
-    <div class="col-md-4">
+    <div style="margin: auto;" class="col-md-4">
       <div class="row card card-outline-secondary">
         <div class="card-body">
           <hr>
@@ -80,5 +24,4 @@
     </div>
 
   </div>
-</body>
-</html>
+{% endblock %}
