--- a/app/templates/reveal.html
+++ b/app/templates/reveal.html
@@ -1,57 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <style>
-        body {
-          padding: 25px;
-        }
-    
-        span[id*="cc-"] {
-          display: block;
-          height: 40px;
-          margin-bottom: 15px;
-        }
-    
-        span[id*="cc-"] iframe {
-          height: 100%;
-          width: 100%;
-        }
-    
-        pre {
-          font-size: 12px;
-        }
-    
-        .form-field {
-          display: block;
-          width: 100%;
-          height: calc(2.25rem + 2px);
-          padding: .375rem .75rem;
-          font-size: 1rem;
-          line-height: 1.5;
-          color: #495057;
-          background-color: #fff;
-          background-clip: padding-box;
-          border: 1px solid #ced4da;
-          border-radius: .25rem;
-          transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-        }
-    
-        .form-field iframe {
-          border: 0 none transparent;
-          height: 100%;
-          vertical-align: middle;
-          width: 100%;
-        }
-    
-        p {
-          margin-bottom: 10px;
-        }
-      </style>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
 <h1>Revealed Card Data:</h1>
 <div><pre>{{ response.data }}</pre></div>
-</body>
-</html>
+{% endblock %}
