--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,50 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Mike's Test CC Form</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script type="text/javascript" src="https://js.verygoodvault.com/vgs-collect/2.1.0/vgs-collect.js"></script>
-    <style>
-    * {
-        box-sizing: border-box;
-      }
-      form {
-        width: 300px;
-        margin: 0 auto;
-      }
-      pre {
-        white-space: pre-wrap;
-        }   
-      .form-field {
-        width: 100%;
-        height: 40px;
-        position: relative;
-        background: white;
-        margin-bottom: 10px;
-        border-radius: 4px;
-        box-shadow: 0 0 3px 0px rgba(0, 0, 0, .3);
-        padding: 0 10px;
-      }
-      iframe {
-        width: 100%;
-        height: 100%;
-      }
-      .form-field-group {
-        display: flex;
-        flex-flow: wrap;
-      }
-      .form-field-group div {
-        flex: 0 0 50%;
-      }
-      .form-field-group div:first-child {
-        border-radius: 4px 0 0 4px;
-      }
-      .form-field-group div:last-child {
-        border-radius: 0 4px 4px 0;
-      }
-    </style>
+    <html lang="en">
+    <head>
+      <meta charset="UTF-8">
+      <title>VGS Collect Credit Card Example</title>
+    
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    
+        <script type="text/javascript" src="https://js.verygoodvault.com/vgs-collect/2.1.0/vgs-collect.js"></script>
+    
+      <style>
+        body {
+          padding: 25px;
+        }
+    
+        span[id*="cc-"] {
+          display: block;
+          height: 40px;
+          margin-bottom: 15px;
+        }
+    
+        span[id*="cc-"] iframe {
+          height: 100%;
+          width: 100%;
+        }
+    
+        pre {
+          font-size: 12px;
+        }
+    
+        .form-field {
+          display: block;
+          width: 100%;
+          height: calc(2.25rem + 2px);
+          padding: .375rem .75rem;
+          font-size: 1rem;
+          line-height: 1.5;
+          color: #495057;
+          background-color: #fff;
+          background-clip: padding-box;
+          border: 1px solid #ced4da;
+          border-radius: .25rem;
+          transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+        }
+    
+        .form-field iframe {
+          border: 0 none transparent;
+          height: 100%;
+          vertical-align: middle;
+          width: 100%;
+        }
+    
+        p {
+          margin-bottom: 10px;
+        }
+      </style>
 </head>
 <body>
 {% block content %}{% endblock %}
