--- a/app/templates/showredacted.html
+++ b/app/templates/showredacted.html
@@ -3,7 +3,7 @@
 <div class="row">
     <div style="margin: auto;" class="col-md-4">
       <div class="row card card-outline-secondary">
-        <div class="alert alert-warning">
+        <div style="margin: auto;" class="alert alert-warning">
             <h5 class="text-center">Redacted data</h5>
             <pre id="result">
               {{ message }}
