--- a/app/templates/showredacted.html
+++ b/app/templates/showredacted.html
@@ -1,25 +1,29 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="row">
-    <div style="margin: auto;" class="col-md-4">
-      <div class="row card card-outline-secondary">
-        <div style="margin: auto;" class="alert alert-warning">
-            <h5 class="text-center">Redacted data</h5>
-            <pre id="result">
-              {{ message }}
-            </pre>
+  <main>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-4">
+        <div class="row card card-outline-secondary">
+          <div class="card-body">
+            <h3 class="text-center"></h3>
+            <hr>
+            <div class="alert alert-info p-2">
+              Click to Reveal Redacted Data
+            <form id="cc-form" method="get" action="/reveal">
+              <button type="submit" class="btn btn-success btn-block">Reveal Card Data</button>
+          </form>
           </div>
-        <div class="card-body">
-          <hr>
-          <div class="alert alert-info p-2">
-            Click to Reveal Redacted Data
-          </div>
-          <form id="cc-form" method="get" action="/reveal">
-            <button type="submit" class="btn btn-success btn-block">Reveal Card Data</button>
-        </form>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="alert alert-warning">
+          <h5 class="text-center">Redacted Card Data</h5>
+          <pre id="result">
+            {{ message }}
+          </pre>
         </div>
       </div>
     </div>
-
-  </div>
+  </main>
 {% endblock %}
