--- a/app/templates/showredacted.html
+++ b/app/templates/showredacted.html
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
               <label for="cc-cvc">CVC</label>
-              <input type="text" value={{message.card_cvc}}>
+              <input type="text" value={{message['card_cvc']}}>
             </div>
             <div class="form-group">
               <label for="cc-expiration-date">Expiration date</label>
