--- a/app/templates/showredacted.html
+++ b/app/templates/showredacted.html
@@ -48,7 +48,7 @@
           OTHER
           {{ message["card_cvc"] }}
           OTHER OTHER
-          {{ message.card_cvc }}
+          {{ message.card_cvc|tojson }}
         </pre>
       </div>
     </div>
