--- a/app/templates/showredacted.html
+++ b/app/templates/showredacted.html
@@ -46,9 +46,10 @@
         <pre id="result">
           {{ message }}
           OTHER
-          {{ message["card_cvc"] }}
+          {{ cvc }}
           OTHER OTHER
-          {{ message.card_cvc|tojson }}
+          {{ cnumber }}
+          {{cexp}}
         </pre>
       </div>
     </div>
