--- a/app/templates/showredacted.html
+++ b/app/templates/showredacted.html
@@ -13,24 +13,18 @@
             <form id="cc-form" method="get" action="/reveal">
               <button type="submit" class="btn btn-success btn-block">Reveal Card Data</button>
           </form>
-          <form id="cc-form" action="/message">
-            <div class="form-group">
-              <label for="cc-name">Name</label>
-              <input type="text" value="default value">
-            </div>
+          <form id="cc-form" action="/reveal">
             <div class="form-group">
               <label for="cc-number">Card number</label>
-              <input type="text" value="default value">
+              <input type="text" value={{cnumber}}>
             </div>
             <div class="form-group">
               <label for="cc-cvc">CVC</label>
-              <input type="text">
+              <input type="text" value={{cvc}}>
             </div>
             <div class="form-group">
               <label for="cc-expiration-date">Expiration date</label>
-              <span class="form-field">
-              
-              </span>
+              <input type="text" value={{cexp}}>
             </div>
 
             <!--Submit credit card form button-->
@@ -45,11 +39,6 @@
         <h5 class="text-center">Redacted Card Data</h5>
         <pre id="result">
           {{ message }}
-          OTHER
-          {{ cvc }}
-          OTHER OTHER
-          {{ cnumber }}
-          {{cexp}}
         </pre>
       </div>
     </div>
