--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
           padding: 25px;
         }
     
-        span[id*="cc-"] {
+        span[id*="cc-"] input {
           display: block;
           height: 40px;
           margin-bottom: 15px;
