--- a/app/templates/showredacted.html
+++ b/app/templates/showredacted.html
@@ -14,23 +14,23 @@
           <form id="cc-form" method="get" action="/reveal">
             <div class="form-group">
               <label for="cc-number">Card number</label>
-              <span class="form-field">
-              <input type="text" value={{cnumber}}>
-              </span>
+              
+              <input class="form-field" type="text" value={{cnumber}}>
+             
             </div>
             <div class="form-group">
               <label for="cc-cvc">CVC</label>
-              <span class="form-field">
-                <input type="text" value={{cvc}}>
-              </span>
+              
+                <input class="form-field" type="text" value={{cvc}}>
+              
               
             </div>
             <div class="form-group">
-               <span class="form-field">
+               
               <label for="cc-expiration-date">Expiration date</label>
-              <span class="form-field">
-              <input type="text" value={{cexp}}>
-              </span>
+              
+              <input class="form-field" type="text" value={{cexp}}>
+              
             </div>
             <button type="submit" class="btn btn-success btn-block">Reveal Card Data</button>
           </form>
