--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,10 +6,10 @@
     <div class="col-md-4">
       <div class="row card card-outline-secondary">
         <div class="card-body">
-          <h3 class="text-center">Credit Card Payment</h3>
+          <h3 class="text-center">Enter Credit Card Information</h3>
           <hr>
           <div class="alert alert-info p-2">
-            Please fill in and submit a form to see redacted data in response window.
+            Submitting this form will generate redacted credit card info for Card Number, CVC and Expiration Date.
           </div>
           <form id="cc-form" action="/message">
             <div class="form-group">
@@ -41,14 +41,6 @@
             <button type="submit" class="btn btn-success btn-block">Submit</button>
           </form>
         </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="alert alert-warning">
-        <h5 class="text-center">Response</h5>
-        <pre id="result">
-          Submit a form to see result.
-        </pre>
       </div>
     </div>
   </div>
