--- a/app/templates/showredacted.html
+++ b/app/templates/showredacted.html
@@ -4,12 +4,19 @@
     <div class="row">
       <div class="col-md-2"></div>
       <div class="col-md-4">
+        <div class="alert alert-warning">
+          <h5 class="text-center">Redacted Card Data</h5>
+          <pre>
+            {{ message }}
+          </pre>
+        </div>
+      </div>
+      <div class="col-md-4">
         <div class="row card card-outline-secondary">
           <div class="card-body">
             <h3 class="text-center">Submit Form to Reveal Redacted Data</h3>
             <hr>
             <div class="alert alert-info p-2">
-              
               
           <form id="cc-form" method="get" action="/reveal">
             <div class="form-group">
@@ -36,14 +43,6 @@
           </form>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="alert alert-warning">
-        <h5 class="text-center">Redacted Card Data</h5>
-        <pre id="result">
-          {{ message }}
-        </pre>
       </div>
     </div>
     </div>
