--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 <main>
   <div class="row">
     <div class="col-md-2"></div>
-    <div style=margin:auto; ="col-md-4">
+    <div style=margin:auto;width:50% ="col-md-4">
       <div class="row card card-outline-secondary">
         <div class="card-body">
           <h3 class="text-center">Enter Credit Card Information</h3>
@@ -43,6 +43,7 @@
         </div>
       </div>
     </div>
+    <div class="col-md-2"></div>
   </div>
 </main>
 
