--- a/app/templates/showredacted.html
+++ b/app/templates/showredacted.html
@@ -18,7 +18,7 @@
             <hr>
             <div class="alert alert-info p-2">
               
-          <form id="cc-form" method="get" action="/reveal">
+          <form id="cc-form" method="POST" action="reveal">
             <div class="form-group">
               <label for="cc-number">Card number</label>
               
@@ -39,7 +39,7 @@
               <input class="form-field" type="text" value={{cexp}}>
               
             </div>
-            <button type="submit" class="btn btn-success btn-block">Reveal Card Data</button>
+            <input type="submit" class="btn btn-success btn-block">Reveal Card Data</input>
           </form>
           </div>
         </div>
