--- a/app/templates/reveal.html
+++ b/app/templates/reveal.html
@@ -1,5 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Revealed Card Data:</h1>
-<div><pre>{{ response.data }}</pre></div>
+<main>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-4">
+        <div class="alert alert-warning">
+          <h5 class="text-center">Credit Card Data Revealed</h5>
+          <pre>
+            {{ response.data }}
+          </pre>
+        </div>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+  </main>
 {% endblock %}
