--- a/app/templates/reveal.html
+++ b/app/templates/reveal.html
@@ -3,7 +3,7 @@
 <main>
     <div class="row">
       <div class="col-md-2"></div>
-      <div class="col-md-4">
+      <div style=margin:auto;width:50%; class="col-md-4">
         <div class="alert alert-warning">
           <h5 class="text-center">Credit Card Data Revealed</h5>
           <pre>
