--- a/app/templates/reveal.html
+++ b/app/templates/reveal.html
@@ -7,7 +7,7 @@
         <div class="alert alert-warning">
           <h5 class="text-center">Credit Card Data Revealed</h5>
           <pre>
-            {{ response }}
+            {{ response.data }}
           </pre>
         </div>
       </div>
