Minor update to index.html syntax

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,7 +11,7 @@
           <div class="alert alert-info p-2">
             Submitting this form will generate redacted credit card info for Card Number, CVC and Expiration Date.
           </div>
-          <form id="cc-form" action="/message">
+          <form id="cc-form">
             <div class="form-group">
               <label for="cc-name">Name</label>
               <span id="cc-name" class="form-field">
