--- a/app/templates/forward.html
+++ b/app/templates/forward.html
@@ -1,17 +1,66 @@
 {% extends "base.html" %}
 {% block content %}
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+<script type="text/javascript" src="https://js.verygoodvault.com/vgs-collect/2.2.1/vgs-collect.js"></script>
+<!-------------------------STYLE-------------------------------->
+<head>
+<style>
+
+    body {
+    padding: 25px;
+    text-align: center;
+    
+    }
+    pre {
+    font-size: 12px;
+    }
+
+    form {
+    display: inline-block;
+    }
+
+    .form-field {
+    display: block;
+    width: 100%;
+    height: calc(2.25rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    }
+  
+    .form-field iframe {
+    border: 0 none transparent;
+    height: 100%;
+    vertical-align: middle;
+    width: 100%;
+    }
+  
+    p {
+    margin-bottom: 10px;
+    } 
+  </style>
+</head>
+
 
 <main>
-    <h1 style="margin: center;"> Revealed Credit Card Information </h1>
-    <div style="margin: center;">
-        
-          <p>{{response.data}}</p>
-     
-    </div>
-    <form action="/" method='GET'>
-        <input style="margin: center;" type="submit" value="Home Page" />
-    </form>
+    <h1 class="text-center"> Revealed Credit Card Information </h1>
+        <br>
+            <div> 
+                <p class="text-center">{{response.data}}</p> 
+            </div>
+        <br>
+            <form action="/" method='GET'>
+                <input type="submit" class="btn btn-danger btn-block" value="Home Page" />
+            </form>  
 </main>
 
 {% endblock %}
