--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -59,14 +59,7 @@
   p {
   margin-bottom: 10px;
   }
-  
-  button, input, select, textarea {
-  font-family: inherit;
-  font-size: 100%;
-  background-color: green;
-  color: white;
-  margin: center;
-}
+
   
   
 </style>
@@ -83,9 +76,6 @@
         <div class="card-body">
           <h3 class="text-center">Credit Card Payment</h3>
           <hr>
-          <div class="alert alert-info p-2">
-            Please fill in and submit a form to see redacted data in response window.
-          </div>
           <form id="cc-form">
             <div class="form-group">
               <label for="cc-name">Name</label>
@@ -123,12 +113,9 @@
     <div class="col-md-4">
       <div class="alert alert-secondary">
         <h5 class="text-center">Instruction</h5>
-        <p>1. Go back to the VGS Collect tab on a Dashboard and change the library file to your own.</p>
-        <p>2. Make sure you initialize form using right environment param.</p>
-        <p>3. Create an inbound route, proceed to Logs on a Dashboard and start recording traffic.</p>
-        <p>4. Fill in and submit the form.</p>
-        <p>5. Open Logs, find your POST request and secure fields that you want to be redacted.</p>
-        <p>6. Submit form one more time.</p>
+        <div class="alert alert-info p-2">
+          Please fill in and submit a form to see redacted data in response window.
+        </div>
       </div>
       <div class="alert alert-warning">
         <h5 class="text-center">Response</h5>
@@ -136,7 +123,7 @@
           Submit the form to see result.
         </pre>
         <form action="/add_message" method='GET'>
-          <input type="submit" value="Reveal Redacted Data!" />
+          <input type="submit" class="btn btn-success btn-block" value="Reveal Redacted Data" />
       </form>
       </div>
     </div>
