--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
-</head>
-<body>
-{% block content %}{% endblock %}
-</form>
-</body>
+    <title>VGS TEST APP</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+  </head>
+  <body>
+  {% block content %}{% endblock %}
+  </body>
 </html>
