--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
+    <title>Justin VGS Task</title>
 </head>
+<link rel="stylesheet" href="{{ url_for('static', filename = 'styles.css') }}">
 <body>
 {% block content %}{% endblock %}
-</form>
 </body>
 </html>
